[package]
name = "auto_timesheet_invoice"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.5.8"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.12.0", features = ["full"] }
reqwest = { version = "0.11.4", features = ["json"] }
chrono = "0.4.19"
chrono-tz = "0.6"
num-rational = "0.4.0"
kv = { version = "0.22.0", features = ["json-value"] }